<resources>
    <string name="app_name">Sampler</string>
    <string name="appbar_create">Create</string>
    <string name="dialog_project_create_title">New project</string>
    <string name="name_hint">Name</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="appbar_delete">Delete all</string>
    <string name="action_export">Export</string>
    <string name="action_save">Save</string>
    <string name="instrument_create">New</string>
    <string name="dialog_instrument_create_title">New instrument</string>
    <string name="path_to_samples_hint">Path to samples</string>
    <string name="sample_add_button">Add</string>
    <string name="label_pitch">Pitch</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="label_velocity">Velocity</string>
    <string name="label_position">Sample Position (seconds)</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="loop">Loop</string>
    <string name="label_envelope">Envelope (ms, ms, dB, ms)</string>
    <string name="base">Base</string>
    <string name="new_instrument">New instrument</string>
    <string name="default_sample_path">Default Sample Directory</string>
    <string name="delete">Delete</string>
    <string name="dialog_instrument_edit_title">Edit instrument</string>
    <string name="dialog_project_edit_submit">Done</string>
    <string name="appbar_clean">Clean files</string>
    <string name="action_refresh_midi">Refresh MIDI</string>
    <string name="project_saved">Saved project</string>
    <string name="play">PLAY</string>
    <string name="pause">PAUSE</string>
    <string name="note_start_label">Note start (bars, sixteenths, ticks)</string>
    <string name="note_length_label">Note length (bars, sixteenths, ticks)</string>
    <string name="snap_length_label">Snap distance (bars, sixteenths, ticks)</string>
    <string name="pattern_length_label">Pattern length (bars, sixteenths)</string>
    <string name="change">Change</string>
    <string name="tempo_label">TEMPO</string>
    <string name="select_instrument">Select instrument</string>
    <string name="dB">dB</string>
    <string name="instrument_volume">Instr. Volume</string>
    <string name="sample_replace_button">Replace</string>
    <string name="sample_delete_button">Delete</string>
    <string name="sample_volume">Sample Volume</string>
    <string name="milliseconds">ms</string>
    <string name="attack">Attack</string>
    <string name="decay">Decay</string>
    <string name="sustain">Sustain</string>
    <string name="release">Release</string>
    <string name="done">Done</string>
    <string name="number_of_copies">Number of copies</string>
    <string name="interval_label">Copy interval (bars, sixteenths, ticks)</string>
    <string name="copy">Copy</string>
    <string name="nothing_selected">Nothing selected</string>
    <string name="copy_multiple_status_range">%s to %s</string>
    <string name="select_all">All</string>
    <string name="select_none">None</string>
    <string name="select_special">Special</string>
    <string name="ic_lock_open_description">Lock</string>
    <string name="select_special_top">Top\n%s (%d)</string>
    <string name="select_special_left">Left\n%s</string>
    <string name="select_special_bottom">Bottom\n%s (%d)</string>
    <string name="select_special_right">Right\n%s</string>
    <string name="select">Select</string>
    <string name="expand_y">Expand</string>
    <string name="expand_x">Expand</string>
    <string name="delete_selected">Delete Selected</string>
    <string name="dialog_instrument_export_title">Export to .zip</string>
    <string name="default_instrument_export_path">Default Export Directory</string>
    <string name="export_path_hint">Export path</string>
    <string name="export_could_not_create">Export failed</string>
    <string name="export_file_exists">Export failed: file exists</string>
    <string name="instrument_exported">Instrument exported</string>
    <string name="pattern_exported">Pattern exported</string>
    <string name="import_checkbox_label">Import samples</string>
    <string name="import_path_hint">Import path</string>
    <string name="file_not_found">File not found</string>
    <string name="action_edit">Edit</string>
    <string name="select_notes">Select notes</string>
    <string name="zero_music_time">0:00:00</string>
    <string name="dialog_project_edit_title">Edit project</string>
    <string name="transpose">Transpose</string>
    <string name="project_could_not_create">Could not create project</string>
    <string name="project_could_not_edit">Please try again</string>
    <string name="add_instruments">Add instruments</string>
    <string name="project_leave">This project has unsaved changes.</string>
    <string name="discard">Discard</string>
    <string name="dialog_project_leave_title">Save before leaving?</string>
    <string name="dialog_pattern_export_title">Export to .midi</string>
    <string name="browse_for_instrument">Browse for instrument</string>
    <string name="pattern_editor_home">Pattern Editor Home</string>
    <string name="pattern_editor_note_properties">Note Properties</string>
    <string name="pattern_editor_copy">Copy notes</string>
    <string name="pattern_editor_snap_length">Snap Length</string>
    <string name="pattern_editor_pattern_length">Pattern Length</string>
    <string name="pattern_editor_export">Export Pattern to MIDI</string>
    <string name="stop">Stop</string>
    <string name="about_third_party_libraries">Third party libraries</string>
    <string name="about_credit_title_1">libpd</string>
    <string name="license">License</string>
    <plurals name="selected_notes_label">
        <item quantity="one">%d note selected</item>
        <item quantity="other">%d notes selected</item>
    </plurals>

    <string name="license_libpd">libpd \u2013 Pure Data for Android\nhttps://github.com/libpd/pd-for-android\nThis software is copyrighted by Peter Brinkmann and others.  The following terms (the "Standard Improved BSD License") apply to all files associated with the software unless explicitly disclaimed in individual files:\n\nRedistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:\n\n1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.\n2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.\n3. The name of the author may not be used to endorse or promote products derived from this software without specific prior written permission.\n\nTHIS SOFTWARE IS PROVIDED BY THE AUTHOR ``AS IS\'\' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</string>
    <string name="license_android_midi_lib">android-midi-lib\nhttps://github.com/LeffelMania/android-midi-lib\nMIT License\n\nCopyright (c) 2017 Alex Leffelman\n\nPermission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:\n\nThe above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.\n\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>
    <string name="import_failed">Import failed</string>
    <string name="appbar_import_project">Import project</string>
    <string name="appbar_about">About</string>
    <string name="dialog_project_import_title">Download project</string>
    <string name="download_url_hint">URL</string>
    <string name="project_imported">Project downloaded</string>
    <string name="import_could_not_connect">Could not connect</string>
    <string name="action_download">Download</string>
    <string name="app_copyright">Copyright (c) 2019 Dylan Burati\nIcon: Keyboard by Shocho from the Noun Project</string>
    <string name="no_projects_yet">Projects you create will be listed here.\n\nTo get started, you can click the menu in the top right and import the default project.</string>
    <string name="pattern_edit_help"><![CDATA[
    The piano roll is a visual representation of a piece of music, similar to sheet music. The <i>x-axis</i> is time, which is divided into bars or measures (dark line) and quarter notes. The <i>y-axis</i> is pitch, which goes from C1 to B8 (middle C is C4).<br><br>To add a note to the piano roll, <b>long click</b><br>To remove a note, <b>long click on it</b><br>To select a note, <b>tap it</b><br><br>Notes about time representation: There are 24 ticks per sixteenth, and 16 sixteenths per bar.
    ]]></string>
    <string name="pattern_editor_help">Pattern Editor Help</string>
</resources>