<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/appbar_create"
        android:title="@string/appbar_create"
        android:icon="@drawable/ic_add"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/appbar_delete"
        android:title="@string/appbar_delete"
        app:showAsAction="never" />

    <item android:id="@+id/appbar_clean"
        android:title="@string/appbar_clean"
        app:showAsAction="never" />

    <item android:id="@+id/appbar_import_project"
        android:title="@string/appbar_import_project"
        app:showAsAction="never" />

    <item android:id="@+id/appbar_about"
        android:title="@string/appbar_about"
        app:showAsAction="never" />
</menu>