<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin3">

        <TextView
            android:id="@+id/interval_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interval_label"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <libre.sampler.views.MusicTimePicker
            android:id="@+id/interval_picker"
            android:layout_width="wrap_content"
            android:layout_height="60sp"
            app:layout_constraintTop_toBottomOf="@id/interval_label"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/count_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin2"
            app:layout_constraintTop_toBottomOf="@id/interval_picker"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/number_of_copies" />

        <NumberPicker
            android:id="@+id/count_picker"
            android:layout_width="wrap_content"
            android:layout_height="60sp"
            app:layout_constraintTop_toBottomOf="@id/count_label"
            app:layout_constraintStart_toStartOf="parent"
            android:dividerPadding="0dp" />

        <TextView
            android:id="@+id/copy_multiple_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/count_picker"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/margin3"
            app:layout_goneMarginTop="0dp"
            android:text="@string/nothing_selected" />

        <Button
            android:id="@+id/submit_copy_multiple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/copy_multiple_status"
            app:layout_constraintStart_toEndOf="@id/copy_multiple_status"
            android:layout_marginLeft="@dimen/margin3"
            android:layout_toRightOf="@id/copy_multiple_status"
            android:text="@string/copy" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
