<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pattern_edit_fragment_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/margin3"
        android:paddingTop="@dimen/margin3"
        android:paddingRight="@dimen/margin3"
        android:paddingBottom="@dimen/margin2">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin3_dense"
            android:text="@string/dialog_pattern_export_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_export_path_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin3_dense"
            android:hint="@string/export_path_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title">

            <EditText
                android:id="@+id/input_export_path"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textUri" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/submit_export"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_export"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_export_path_container" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
