<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/margin3"
    android:paddingBottom="@dimen/margin2"
    android:paddingLeft="@dimen/margin3"
    android:paddingRight="@dimen/margin3">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin3"
        android:layout_marginLeft="@dimen/margin1"
        android:text="@string/dialog_instrument_export_title"
        android:textSize="@dimen/title"
        app:fontFamily="sans-serif-medium"
        android:layout_marginStart="@dimen/margin1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin3_dense"
            android:hint="@string/export_path_hint">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input_export_path"
                android:ems="10"
                android:inputType="textUri"
                android:imeOptions="actionNext" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint">

            <EditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:imeOptions="actionDone" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</LinearLayout>