<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:id="@+id/min_height_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin3">

        <TextView
            android:id="@+id/selected_notes_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/note_start_label"
            android:layout_below="@id/selected_notes_label"
            android:layout_marginTop="@dimen/margin2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note_start_label" />

        <libre.sampler.views.MusicTimePicker
            android:id="@+id/note_start_picker"
            android:layout_width="wrap_content"
            android:layout_height="60sp"
            android:layout_below="@id/note_start_label" />

        <TextView
            android:id="@+id/note_length_label"
            android:layout_below="@id/note_start_picker"
            android:layout_marginTop="@dimen/margin2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/note_length_label" />

        <libre.sampler.views.MusicTimePicker
            android:id="@+id/note_length_picker"
            android:layout_width="wrap_content"
            android:layout_height="60sp"
            android:layout_below="@id/note_length_label" />

        <LinearLayout
            android:id="@+id/note_velocity_container"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/volume_slider_height"
            android:layout_below="@id/note_length_picker"
            android:orientation="vertical"
            android:paddingLeft="@dimen/margin2_dense"
            android:paddingTop="@dimen/margin2"
            android:paddingRight="@dimen/margin2_dense">

            <libre.sampler.views.VerticalSlider
                android:id="@+id/note_velocity_slider"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0">

                <EditText
                    android:id="@+id/note_velocity"
                    android:layout_width="@dimen/instrument_editor_edittext_width"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal" />
            </RelativeLayout>

            <TextView
                android:id="@+id/note_velocity_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0"
                android:gravity="center_horizontal|top"
                android:labelFor="@id/note_velocity"
                android:text="@string/label_velocity" />
        </LinearLayout>

        <GridLayout
            android:id="@+id/note_transpose_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:layout_toRightOf="@id/note_velocity_container"
            android:layout_alignTop="@id/note_velocity_container"
            android:layout_marginTop="@dimen/margin3"
            android:layout_marginLeft="@dimen/margin2_dense">

            <TextView
                android:id="@+id/note_transpose_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:layout_marginBottom="@dimen/margin2_dense"
                android:text="@string/transpose" />

            <Button
                android:id="@+id/note_transpose_minus_1"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:text="-1" />

            <Button
                android:id="@+id/note_transpose_plus_1"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:text="+1" />

            <Button
                android:id="@+id/note_transpose_minus_12"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:text="-12" />

            <Button
                android:id="@+id/note_transpose_plus_12"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:text="+12" />
        </GridLayout>
    </RelativeLayout>
</ScrollView>
